--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Helios by HTML5 UP</title>
+		<title>Tekhmos Corp. | Overview</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,9 +21,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">Tekhmos Corp.</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>Where Imagination Meets Technology, Where Projects Lead the Way</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
