--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<p>Where Imagination Meets Technology, Where Projects Lead the Way</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">↓</a>
 							</footer>
 						</div>
 
@@ -35,12 +35,12 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Tekhmos</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
+										<li><a href="#">About US</a></li>
+										<li><a href="#">Historyu</a></li>
+										<li><a href="#">Contact Us</a></li>
+									<!--	<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
 												<li><a href="#">Lorem ipsum dolor</a></li>
@@ -48,7 +48,7 @@
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam dolore nisl</a></li>
 											</ul>
-										</li>
+										</li> -->
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
@@ -350,18 +350,18 @@
 										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
 										<ul class="icons">
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<!-- <li><a href="#" class="icon brands fa-"><span class="label">Facebook</span></a></li> -->
 											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="https://linkedin.com/company/tekhmos-corp/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+											<li><a href="https://github.com/Tekhmos-Corp/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+											<li><a href="mailto:support@tekhmos.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+											<li><a href="https://linkedin.com/company/tekhmos-corp/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">Linkedin</span></a></li>
 										</ul>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Tekhmos Corp. 2023 | All rights reserved.</li>
 										</ul>
 									</div>
 
