--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <title>WIP</title>
   <body>
-    <p align=center> This site is currently being dev'd by the Tekhmos team. Thank you for your patience. Meanwhile, you can contact us <a href="mailto:tekhmos@tekhmos.com"> here </a> </p>
+    
+    <p align=center> 
+      <h1>
+        This site is currently being dev'd by the Tekhmos team. Thank you for your patience. Meanwhile, you can contact us <a href="mailto:tekhmos@tekhmos.com"> here </a> 
+      </h1>
+    </p>
   </body>
 </html>
