--- a/dev.html
+++ b/dev.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Togthr (Template 9)</title>
-    <meta property="og:title" content="Togthr (Template 9)" />
+    <title>Tekhmos Corp.</title>
+    <meta property="og:title" content="Tekhmos Corp." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -75,7 +75,7 @@
                 data-role="Nav"
                 class="home-nav"
               >
-                <div class="home-container1">
+                <!-- <div class="home-container1">
                   <img alt="image" src="public/logo.svg" class="home-image" />
                   <div data-thq="thq-close-menu" class="home-menu-close">
                     <svg viewBox="0 0 1024 1024" class="home-icon01">
@@ -84,7 +84,7 @@
                       ></path>
                     </svg>
                   </div>
-                </div>
+                </div> -->
                 <nav
                   data-thq="thq-mobile-menu-nav-links"
                   data-role="Nav"
