--- a/dev.html
+++ b/dev.html
@@ -90,15 +90,15 @@
                   data-role="Nav"
                   class="home-nav1"
                 >
-                  <span class="home-text">About</span>
-                  <span class="home-text01">Features</span>
-                  <span class="home-text02">Pricing</span>
-                  <span class="home-text03">Team</span>
+                  <span class="home-text">Acerca de nosotros</span>
+                  <span class="home-text01">Novedades</span>
+                  <span class="home-text02">Servicio</span>
+                  <span class="home-text03">Equipo</span>
                   <span class="home-text04">Blog</span>
                 </nav>
                 <div class="home-container2">
-                  <button class="home-login button">Login</button>
-                  <button class="button">Register</button>
+                  <button class="home-login button">Iniciar sesión (proximamente)</button>
+                  <button class="button">Registrar (proximamente)</button>
                 </div>
               </div>
               <div class="home-icon-group">
@@ -128,13 +128,12 @@
                 </h1>
               </div>
               <p class="home-caption">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
+                Sección 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
               </p>
             </div>
             <button class="button home-button">
               <span>
-                <span>Get started today</span>
+                <span>Empezar hoy mismo</span>
                 <br />
               </span>
             </button>
@@ -142,16 +141,14 @@
         </section>
         <section class="home-note">
           <h2 class="home-caption01">
-            The most comprehensive lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna.
+            No se que seccion es, por eso pongo el identificador 20
           </h2>
         </section>
         <section class="home-statistics">
           <div class="home-content">
             <div class="home-stat">
-              <h3 class="home-header01">$1.69M</h3>
-              <span class="home-caption02">Consectetur adipiscing</span>
+              <h3 class="home-header01">Dinero xD</h3>
+              <span class="home-caption02">eh?</span>
             </div>
             <div class="home-stat1">
               <h3 class="home-header02">Multiverse</h3>
