--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <p align=center> 
       <h1>
-        This site is currently being dev'd by the Tekhmos team. Thank you for your patience. Meanwhile, you can contact us <a href="mailto:tekhmos@tekhmos.com"> here </a> 
+        This site is currently being dev'd by the Tekhmos team. Thank you for your patience. Meanwhile, you can contact us <a href="https://github.com/tekhmos-corp"> here </a> 
       </h1>
     </p>
   </body>
